Version 1.3.0
* Post NRAO-DiFX 1.1
* Start of Mark5C development

Version 1.2.3
* fix minor bug in blanking code -- end of header not blanked on first frame
  of mark4 format
* add m5spec -- a spectrometer test program.  Needs fftw3 to compile.
* allow offsets > 2 GiB
* add m5test -- look for problems in data files
* add consecutivefails.  
* fix to file stream type -- sometimes 1 frame would be skipped
* fix to mark4 decoding -- sample offset was wrong.  stupid data replacement!

Version 1.2.2
* rename oversampling to decimation

Version 1.2.1
* add oversampling (factors 1, 2, 4, 8+) support to mark4 vlba mark5 formats

Version 1.2.0
* fix some Mark5B issues.  This required changing ns to be a double throughout.

Version 1.1.3
* fix datestamp on mark4 data -- subtract 1 day (Jan 0, not Jan 1 is the zeroth day of year)

Version 1.1.2
* Support < 8 tracks on vlba and mark4 formats
* new unpack function allowing offset into stream

Version 1.1.1
* Fix unpack/blanker issue
* Fix mark5_stream_open()
* New functions:
    const char *mark5_stream_list_formats();
    struct mark5_format *new_mark5_format_from_name(const char *formatname);

Version 1.1.0
* Start of K5 support -- not yet usable
* Implement blanking: look for fill pattern and decode to all zeros.

Version 1.0.1
* Fix new_mark5_format_from_stream()

Version 1.0
* Support of VLBA, Mark4 & Mark5B formats
* Support File and Memory streams
* Support "pure" unpacking -- no frame validation
* Big and Little Endian support