@@ -2217,7 +2217,7 @@ static int mark5_format_mark5b_init(struct mark5_stream *ms)
 				}
 				ms->samprate = ms->framesamples*
 					(1000000000/ms->framens);
-				datarate = ms->samprate*ms->nbit*ms->nchan/1000000;
+				datarate = ms->decimation*ms->samprate*ms->nbit*ms->nchan/1000000;
 				if(datarate != ms->Mbps)
 				{
 					if(ms->Mbps > 0)
